style.css
footer {
    background: #00252E;
    color: #ffff;
}

nav {
    display: flex;
    justify-content: space-between;
}

nav button {
    background: #ffffff;
    color: hsl(322, 100%, 66%);
    border: 2px solid hsl(322, 100%, 66%);
    border-radius: 20px;
    height: 30px;
    width: 10%;
}

button {
    background: hsl(322, 100%, 66%);
    color: #fff;
    border-radius: 20px;
    height: 30px;
    width: 10%;
}

button:hover {
    cursor: pointer;
}

@media screen and (min-width: 320px) and (max-width: 480px) {}

@media screen and (min-width: 481px) and (max-width: 768px) {}

@media screen and (min-width: 769px) and (max-width: 1024px) {}

@media screen and (min-width: 1025px) and (max-width: 1200px) {}

@media screen and (min-width: 1201px) {}

